--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"body-parser": "^1.20.1",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
-		"express": "^4.16.4"
+		"express": "^4.16.4",
+		"mongoose": "^6.8.2"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
